--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -481,7 +481,7 @@ body {
 /* --- ESTILOS PARA LA IMAGEN EN MOVIMIENTO (DERECHA) --- */
 .animated-image-banner {
     width: 100%; /* La imagen ocupará todo el ancho de su contenedor */
-    max-width: 300px; /* Asegura el mismo tamaño que la imagen de la izquierda */
+    max-width: 400px; /* Tamaño imagen publucidad izq. Con 300 asegura el mismo tamaño que la imagen de la izquierda */
     height: auto; /* Mantiene la proporción */
     display: block; /* Asegura que no haya espacio extra debajo de la imagen */
     /* Animación: Puedes usar una animación CSS o un GIF/PNG animado directamente */
